--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query-builder",
+  "name": "fragmentum",
   "version": "0.0.1",
   "description": "A SQL Query builder optimized for backend applications",
   "main": "src/index.js",
