Improvements to the builder API (#2)
Instead of doing `new Builder([])` we now have `builder()`

Also includes lots of refactors and a few new features like bind params

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">= 8.x"
   },
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest --watch --coverage",
     "build": "rollup -c",
     "prepublish": "yarn build",
     "test:ci": "jest --ci"
