--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "repository": "NLincoln/fragmentum",
   "license": "MIT",
   "engines": {
-    "node": ">= 8.x"
+    "node": ">= 6.x"
   },
   "scripts": {
     "test": "jest --watch --coverage",
-    "build": "rollup -c",
+    "build": "BABEL_ENV=build rollup -c",
     "prepublish": "yarn build",
     "test:ci": "jest --ci"
   },
@@ -21,19 +21,37 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "jest": "^22.2.2",
-    "rollup": "^0.55.5"
+    "rollup": "^0.55.5",
+    "rollup-plugin-babel": "^3.0.3"
   },
   "jest": {},
   "babel": {
-    "presets": [
-      [
-        "babel-preset-env",
-        {
-          "targets": {
-            "node": "8"
-          }
-        }
-      ]
-    ]
+    "env": {
+      "build": {
+        "presets": [
+          [
+            "babel-preset-env",
+            {
+              "modules": false,
+              "targets": {
+                "node": "6"
+              }
+            }
+          ]
+        ]
+      },
+      "test": {
+        "presets": [
+          [
+            "babel-preset-env",
+            {
+              "targets": {
+                "node": "6"
+              }
+            }
+          ]
+        ]
+      }
+    }
   }
 }
