--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "test:ci": "jest --ci"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "jest": "^22.2.2",
     "rollup": "^0.55.5",
@@ -26,6 +25,7 @@
   },
   "jest": {},
   "babel": {
+    "plugins": ["transform-object-rest-spread"],
     "env": {
       "build": {
         "presets": [
