--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "jest": "^22.2.2",
+    "jest": "^23.6.0",
+    "prettier": "^1.14.2",
     "rollup": "^0.55.5",
     "rollup-plugin-babel": "^3.0.3"
   },
   "jest": {
+    "verbose": true,
     "moduleNameMapper": {
       "fragmentum": "<rootDir>/src/index.js"
     },
